reimplementing with virtual threads